[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/blockSnowQuarter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/blockSnowHexagon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=5]
[ext_resource path="res://Scenes/delivery.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/ambulance.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/blockSnowCornerLarge.tscn" type="PackedScene" id=8]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 100, 100 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -50.2732, 0.273224, -50.2732, -50.2732, 0.273224, 50.2732, 50.2732, 0.273224, -50.2732, 50.2732, 0.273224, 50.2732 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.5
height = 2.0

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.5, 0.2, 0.5 )

[sub_resource type="SphereMesh" id=5]
radius = 2.0
height = 4.0

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -1.95473, -0.366655, 0.185436, -1.88569, 0.365158, -0.545628, -1.88551, -0.243416, 0.611221, -1.82322, -0.364876, -0.727832, -1.7566, 0.849046, 0.426823, -1.63315, -1.09043, -0.360923, -1.44667, 1.08692, -0.842869, -1.38787, -1.32958, 0.546097, -1.38603, -0.54308, 1.33012, -1.27271, 0.24275, 1.52044, -1.21069, 0.485271, -1.51393, -1.20531, 1.44936, 0.666261, -1.20528, -0.966215, -1.26581, -1.15089, 1.57842, -0.422541, -1.08915, -0.363563, -1.63469, -1.02238, 1.08471, 1.32788, -0.906311, -1.69615, -0.542715, -0.843739, 1.45084, -1.08574, -0.841348, -1.08496, 1.44904, -0.787832, -0.182016, 1.82551, -0.483722, 1.45807, 1.27806, -0.482492, -1.21179, -1.51244, -0.424246, 1.88948, 0.489945, -0.422007, -1.57643, 1.15405, -0.364332, -0.183125, -1.9546, -0.364253, -1.95648, 0.185385, -0.30131, 1.33581, -1.45526, -0.241129, 1.88791, -0.606655, -0.180451, -0.610189, 1.89404, -0.180451, 0.61019, 1.89404, -0.180205, 0.792254, -1.8258, 0.123794, 1.58057, 1.218, 0.184696, -1.70173, -1.03077, 0.185124, -0.791984, -1.82518, 0.306086, -1.0937, 1.64267, 0.367532, -1.8864, -0.545167, 0.369041, -1.95544, 0.185288, 0.369041, 1.95544, 0.185288, 0.369127, 1.9559, -0.18073, 0.486796, -1.21105, -1.51151, 0.546097, 1.32958, -1.38787, 0.548718, -1.57913, 1.09552, 0.668159, 1.02933, 1.57684, 0.669484, 0.485467, -1.81791, 0.793616, -0.121712, 1.82912, 0.907521, 1.5692, -0.842422, 1.03256, 1.57595, 0.668758, 1.08713, -1.02442, 1.32804, 1.20938, 0.663667, -1.44642, 1.21369, -0.484632, -1.51194, 1.21822, -1.58084, -0.119215, 1.21822, 1.58084, -0.119215, 1.26675, 0.963423, 1.20639, 1.26807, -1.20535, -0.96213, 1.27556, 0.242344, 1.5179, 1.45853, -1.27416, 0.487712, 1.63206, 0.84495, -0.782135, 1.63951, -0.484819, 1.03311, 1.70453, 1.03337, 0.123806, 1.70518, -0.121171, -1.03147, 1.75867, -0.847642, -0.421521, 1.76579, 0.182102, 0.913951, 1.95887, 0.305667, -0.24208, 1.96087, -0.366944, -0.0586655 )

[sub_resource type="SpatialMaterial" id=7]

[sub_resource type="PrismMesh" id=8]
material = SubResource( 7 )

[sub_resource type="ConvexPolygonShape" id=9]
points = PoolVector3Array( -1, -1, -1, -1, -1, 1, -0.0293034, 0.941393, -0.941393, -0.0293034, 0.941393, 0.941393, 0.0293034, 0.941393, -0.941393, 0.0293034, 0.941393, 0.941393, 0.147043, 0.705915, 0.94122, 1, -1, -1, 1, -1, 1 )

[sub_resource type="SphereShape" id=10]
radius = 4.0

[node name="Game" type="Spatial"]
script = ExtResource( 2 )

[node name="Ground" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 2 )

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 1 )

[node name="Body" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.2, 0 )
shape = SubResource( 4 )

[node name="Pivot" type="Spatial" parent="Player"]

[node name="Camera" type="Camera" parent="Player/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
current = true

[node name="blockSnowCornerLarge" parent="." instance=ExtResource( 8 )]
transform = Transform( 10, 0, 0, 0, 3, 0, 0, 0, 10, 20, 0, 20 )

[node name="blockSnowHexagon" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 20 )

[node name="blockSnowQuarter" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -20 )

[node name="delivery" parent="." instance=ExtResource( 6 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 10, 0, 10 )

[node name="ambulance" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 10 )

[node name="Enemy" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 20 )
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Enemy"]
mesh = SubResource( 5 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Enemy"]
shape = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 3 )
mesh = SubResource( 8 )
material/0 = null

[node name="CollisionShape2" type="CollisionShape" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 3 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="Enemy"]
wait_time = 3.0
one_shot = true

[node name="Scan" type="RayCast" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
enabled = true
cast_to = Vector3( 0, -1, 50 )

[node name="Nearby" type="Area" parent="Enemy"]

[node name="CollisionShape" type="CollisionShape" parent="Enemy/Nearby"]
shape = SubResource( 10 )
[connection signal="timeout" from="Enemy/Timer" to="Enemy" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Enemy/Nearby" to="Enemy" method="_on_Nearby_body_entered"]
[connection signal="body_exited" from="Enemy/Nearby" to="Enemy" method="_on_Nearby_body_exited"]
